--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,1 +1,18 @@
-<div class="quiz_container"></div>
+<div class="quiz-container">
+    <div class="logo">
+        <img src="../../../assets/img/logo.png" alt="">
+        <h3>Título</h3>
+    </div>
+    <div class="questions">
+        <h3>Questão selecionada</h3>
+    </div>
+    <div class="options">
+        <button class="btn-option">
+            optionname
+        </button>
+    </div>
+    <div class="results">
+        <h1>O seu resultado é: </h1>
+        <p>Resposta selecionada</p>
+    </div>
+</div>
