--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,17 +1,17 @@
 <div class="quiz-container">
     <div class="logo">
         <img src="../../../assets/img/logo.png" alt="">
-        <h3>Título</h3>
+        <h3>{{title}}</h3>
     </div>
     <div class="questions">
-        <h3>Questão selecionada</h3>
+        <h3>{{questionSelected.question}}</h3>
     </div>
     <div class="options">
         <button class="btn-option">
             optionname
         </button>
     </div>
-    <div class="results">
+    <div *ngIf=finished class="results">
         <h1>O seu resultado é: </h1>
         <p>Resposta selecionada</p>
     </div>
