--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -7,8 +7,8 @@
         <h3>{{questionSelected.question}}</h3>
     </div>
     <div class="options">
-        <button class="btn-option">
-            optionname
+        <button class="btn-option" *ngFor="let option of questionSelected.options" (click)="playerChoice(option.alias)">
+            {{option.name}}
         </button>
     </div>
     <div *ngIf=finished class="results">
